--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.1",
+    "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
