--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
     "axios": "^1.9.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.10",
     "pinia": "^3.0.1",
